added logo and header style

--- a/app/shared/header/headerView.html
+++ b/app/shared/header/headerView.html
@@ -1,5 +1,9 @@
 <header>
   <figure class="logo">
-    <img src="" alt="rokk3rlabs">
+    <img src="./../assets/img/logo.png" alt="rokk3rlabs">
   </figure>
+  <div class="menu">
+    <span>Admin Name</span>
+    <i class="fa fa-cog" aria-hidden="true"></i>
+  </div>
 </header>
