added aside style

--- a/app/shared/sidebar/sidebarView.html
+++ b/app/shared/sidebar/sidebarView.html
@@ -4,12 +4,34 @@
     <ul class="nav">
       <li>
         <a ui-sref="app.home">
-          <i class="fa fa-snapchat-square" aria-hidden="true"></i> Home
+          <i class="fa fa-line-chart" aria-hidden="true"></i>
+          <span>Analytics</span>
         </a>
       </li>
-      <li><a ui-sref="app.news">Route 1</a></li>
-      <li><a>Board Brief</a></li>
-      <li><a>Briefcase</a></li>
+      <li>
+        <a ui-sref="app.news">
+          <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+          <span>News</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+          <span>Board Brief</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-briefcase" aria-hidden="true"></i>
+          <span>Briefcase</span>
+        </a>
+      </li>
+      <li class="close-menu">
+        <a href="#">
+          <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+          <span>Close menu</span>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
