--- a/app/shared/header/headerView.html
+++ b/app/shared/header/headerView.html
@@ -3,7 +3,9 @@
     <img src="./../assets/img/logo.png" alt="rokk3rlabs">
   </figure>
   <div class="menu">
-    <span>Admin Name</span>
-    <i class="fa fa-cog" aria-hidden="true"></i>
+    <a href="#">
+      <span>Admin Name</span>
+      <i class="fa fa-cog" aria-hidden="true"></i>
+    </a>
   </div>
 </header>
