--- a/app/shared/sidebar/sidebarView.html
+++ b/app/shared/sidebar/sidebarView.html
@@ -3,7 +3,7 @@
     <h4>Navigate</h4>
     <ul class="nav">
       <li>
-        <a ui-sref="app.home">
+        <a ui-sref="app.dashboard">
           <i class="fa fa-line-chart" aria-hidden="true"></i>
           <span>Analytics</span>
         </a>
@@ -15,19 +15,19 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a class="not-active">
           <i class="fa fa-file-text-o" aria-hidden="true"></i>
           <span>Board Brief</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a class="not-active">
           <i class="fa fa-briefcase" aria-hidden="true"></i>
           <span>Briefcase</span>
         </a>
       </li>
       <li class="close-menu">
-        <a href="#">
+        <a>
           <i class="fa fa-angle-double-left" aria-hidden="true"></i>
           <span>Close menu</span>
         </a>
