--- a/app/shared/sidebar/sidebarView.html
+++ b/app/shared/sidebar/sidebarView.html
@@ -3,13 +3,13 @@
     <h4>Navigate</h4>
     <ul class="nav">
       <li>
-        <a ui-sref="app.dashboard">
+        <a ui-sref="app.dashboard" ui-sref-active="active">
           <i class="fa fa-line-chart" aria-hidden="true"></i>
           <span>Analytics</span>
         </a>
       </li>
       <li>
-        <a ui-sref="app.news">
+        <a ui-sref="app.news" ui-sref-active="active">
           <i class="fa fa-newspaper-o" aria-hidden="true"></i>
           <span>News</span>
         </a>
