--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name='viewport' content='width=device-width, minimum-scale=1.0, initial-scale=1.0'>
     <title>AngularJs-Rokk3rlabs</title>
     <!-- css -->
-    <link rel="stylesheet" href="./components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/app.css">
   </head>
   <body>
     <!-- load template -->
     <div ui-view></div>
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
-    <script src="./components/angular/angular.min.js"></script>
-    <script src="./components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
+    <script src="components/angular/angular.min.js"></script>
+    <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
     <script src="js/app.min.js"></script>
   </body>
 </html>
